2000-02-24  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* added .cvsignore files into the CVS repository.

	* remove files which can be regenerated: .in, configure, some
	files in aux/, and more.

2000-02-20  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* doc/am-utils.texi (nfs_vers/nfs_protoc): description of two
	parameters was reversed.  Reported by Paul Jenner
	<p.jenner@eim.surrey.ac.uk>.

2000-02-16  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* released snapshot am-utils-6.0.4s2

	* amd/mntfs.c (realloc_mntfs): don't fallback on certain ops such
	as inherit, error, and toplvl (failover code).

	* amd/conf.c (gopt_nfs_vers, gopt_nfs_proto): two new (documented)
	global options in amd.conf: one to set the NFS version globally
	(i.e., nfs_vers=2), and one to set the NFS protocol globally
	(i.e., nfs_proto=udp).

	* amd/mntfs.c (realloc_mntfs): attempt to fix the failover code,
	so when a matching mount entry failed, try the next one.

2000-02-15  Erez Zadok  <ezk@moisil.cs.columbia.edu>

	* amd/amfs_auto.c: a new debug option "readdir" to trace the
	progress of the browsable_dirs code.

	* conf/mount/mount_linux.c (mount_linux): ensure that the new
	linux NFSv3 code works for v2-only machines.

2000-02-14  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* aux/configure.in: cleanup unused dnl entries.

	* conf/mount/mount_linux.c (parse_opts): typo: check for string
	equality, not string inequality for pcfs and cdfs.

	* aux/acconfig.h: look for MNT2_NFS_OPT_INTR as well.

	* libamu/mount_fs.c (compute_mount_flags): check for INTR and
	NOINTR options as well (intr was never passed to linux mount
	syscall).

2000-02-10  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* released snapshot am-utils-6.0.4s1

	* aux/GNUmakefile: buildall -k (for maintainers) temporarily now
	ignores autoconf warnings: "The macro `AC_OUTPUT_COMMANDS' is
	obsolete".  It is harmless but annoying, and will be fixed when