@@ -1,3 +1,12 @@
+2000-02-24  Ion Badulescu  <ib42@beetle.mcl.cs.columbia.edu>
+
+	* amd/amfs_auto.c (amfs_auto_bgmount): changed log message to
+	avoid having 'failed' in a message not indicating a failure
+	(amfs_auto_lookuppn): ditto
+
+	* amd/ops_autofs.c (autofs_bgmount): ditto
+	(autofs_lookuppn): ditto
+
 2000-02-24  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>
 
 	* added .cvsignore files into the CVS repository.
